# LicensePlateCV

./: .gitignore  README.md  generative-plate-decoding-research-memo.md  pyproject.toml
ExampleLicensePlateGenerator/: decoded.json  decoded_test.json
Sources_And_Background/lrlpr-26-dataset/: README.md
data/: build_fanvid_lp.py  probe_fanvid_sources.py
docs/: design-01-forward-model.md  design-02-likelihood-and-fusion.md  design-03-inspection-app.md  discussion-log.md  fanvid-forward-model-notes.md  phase0-datasets.md  phase0-sota-baselines.md  plate-spec-sources.md
src/lrlpr/: __init__.py  pipeline.py  plate_spec.py
src/lrlpr/camera/: __init__.py  delivery.py  demosaic.py  isp.py  motion.py  optics.py  sensor.py  stages.py
src/lrlpr/decode/: __init__.py  fit.py  likelihood.py  reference.py  rungs.py  slots.py
src/lrlpr/render/: __init__.py  project.py  shading.py  stages.py  surface.py
tests/: test_camera.py  test_decode_e0_e1.py  test_decode_e2.py  test_decode_reference.py  test_fit_g2.py  test_geometry_g1.py  test_pipeline.py  test_render.py
tools/: decode_reference.py
tools/inspect_app/: main.py
