[project]
name = "lrlpr"
version = "0.1.0"
description = "Generative trellis decoding for license plate recognition under severe degradation (analysis-by-synthesis, ideal-observer bounds)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pillow>=10.0",
    "opencv-python-headless>=4.10",
    "matplotlib>=3.9",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ipython>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lrlpr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
